# aithena-python-test-task

./: .coveragerc  .env.example  .gitignore  Dockerfile  README.md  main.py  main_async.py  pyproject.toml  requirements.txt  task.md
data/: 1.py  2.py  3.py
examples/: process_file.py  process_files_sync.py
results/: 1_analysis.json  1_rust_functions.rs  2_analysis.json  2_functions.json  3_analysis.json  3_functions.json
src/: aithena_task_solver.py
src/agents/: __init__.py  code_translator.py  copyright_extractor.py  function_analyzer.py  language_detector.py  license_detector.py  safety_checker.py  utils.py
src/data_models/: __init__.py  analysis_models.py  license_types.py  response_models.py
src/llm/: __init__.py  anthropic_client.py  example_usage.py  openai_client.py  protocols.py  utlis.py
src/services/: __init__.py  code_analyzer.py  function_counter.py  function_handlers.py  language_detector.py  license_detector.py  result_handler.py
tests/unit/: conftest.py  conftest_ai.py  test_ai_services.py  test_anthropic_client.py  test_function_counter.py  test_license_detector.py  test_openai_client.py
