[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aithena-license-analyzer"
description = "License and code analysis tool that extracts license information from Python files, analyzes function signatures, and conditionally rewrites code using LLMs"
version = "0.1.0"
authors = [
    {name = "Andrzej Ratajski", email = "andrzej.ratajski@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["license", "code analysis", "LLM", "ast", "parsing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pytest>=7.0.0",
    "mypy>=1.0.0", 
    "flake8>=6.0.0",
    "openai>=1.0.0",
]

[project.urls]
Repository = "https://github.com/andrzej-r/aithena-python-test-task"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests/unit",
    "tests/integration",
    "examples",
]
addopts = "--doctest-modules --cov=src --cov-report term-missing --cov-config=.coveragerc"
env = [
    "LLM_PROVIDER=foo"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.flake8]
max-line-length = 120
exclude = ["venv", ".venv", ".git", "__pycache__", "build", "dist"]