[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aithena-license-analyzer"
description = "License and code analysis tool."
version = "0.1.0"
authors = [
    {name = "Andrzej Ratajski", email = "andrzej.ratajski@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.5.0",
    "openai>=1.0.0",
    "pydantic>=2.4.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov==6.1.1",
    "pytest-env==1.1.5",
    "mypy>=1.0.0", 
    "flake8>=6.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Repository = "https://github.com/andrzej-r/aithena-python-test-task"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = [
    "tests/unit",
    "examples",
]
addopts = "--doctest-modules --cov=src --cov-report term-missing --cov-config=.coveragerc"
env = [
    "LLM_PROVIDER=foo"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.flake8]
max-line-length = 120
exclude = ["venv", ".venv", ".git", "__pycache__", "build", "dist"]